--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -52,12 +52,27 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-07-04 周一 23:00 ++1w> SCHEDULED: <2022-07-01 周五 18:00 ++1w>
+DEADLINE: <2022-07-18 周一 23:00 ++1w> SCHEDULED: <2022-07-15 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-06-25 周六 13:43]
+:LAST_REPEAT: [2022-07-09 周六 14:46]
 :END:
+- State "DONE"       from "TODO"       [2022-07-09 周六 14:46] \\
+  1. 完成新版spine编辑器
+  2. 支持成品号功能
+  3. spine播放同个动作支持多个名称
+  -------------------------------
+  1. 进行两个君主的wan
+- State "DONE"       from "TODO"       [2022-07-04 周一 09:34] \\
+  1. 新版spine编辑器制作:
+     * 完成UI设计与实现
+     * 完成数据层的迁移
+     * 完成新的文件打开和方案编辑功能
+  2. UI编辑器接入promote_config.py来生成项目自定义代码
+  3. 法术编辑器支持自动附加场景(尚未提交)
+  -------------------------------
+  1. 木筏结束, 最后的bug给我恶心坏了
 - State "DONE"       from "TODO"       [2022-06-25 周六 13:43] \\
   1. 战斗模块ui适配
   2. 法术编辑器扩展正式接入以文档更新
@@ -766,8 +781,21 @@ DEADLINE: <2022-07-30 周六 23:00 ++1m> SCHEDULED: <2022-07-30 周六 09:00 ++1
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-30 周一 10:35]
+:LAST_REPEAT: [2022-07-04 周一 14:31]
 :END:
+- State "DONE"       from "TODO"       [2022-07-04 周一 14:31] \\
+  工作上:
+  1. 编写季度报告
+  2. 项目编辑器整合到一个通用入口处
+  3. 项目编辑器统一使用固定位置的资源
+  4. 战斗常量优化
+  5. 实现特殊跳字(连击, 协战)
+  6. 战斗信息面板优化
+  7. 法术编辑器支持自动附加场景
+  8. UI编辑器使用配置文件来达成生成时使用项目对象替换的功能
+  9. 完成spine编辑器的总体设计和界面设计
+  生活上:
+  1. 无事发生
 - State "DONE"       from "TODO"       [2022-05-30 周一 10:35] \\
   工作上:
   1. 完成战斗进度条
@@ -1006,10 +1034,12 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 ** TODO [#A] 减肥                                                   :event:
-SCHEDULED: <2022-06-27 周一 17:27 ++1w>
+SCHEDULED: <2022-07-04 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-06-25 周六 17:08]
+:LAST_REPEAT: [2022-07-04 周一 09:41]
 :END:
+- State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
+- 4.0km, 69.7kg
 - State "DONE"       from "TODO"       [2022-06-25 周六 17:08] \\
   6.0km, 69.4kg
 - State "DONE"       from "TODO"       [2022-06-18 周六 14:00] \\
