--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -112,11 +112,13 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-07-02 周六 18:00 ++1w> DEADLINE: <2022-07-04 周一 12:00 ++1w>
+SCHEDULED: <2022-07-16 周六 18:00 ++1w> DEADLINE: <2022-07-18 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-06-25 周六 14:25]
+:LAST_REPEAT: [2022-07-09 周六 14:45]
 :END:
+- State "DONE"       from "TODO"       [2022-07-09 周六 14:45]
+- State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
 - State "DONE"       from "TODO"       [2022-06-25 周六 14:25]
 - State "DONE"       from "TODO"       [2022-06-18 周六 19:13]
 - State "DONE"       from "TODO"       [2022-06-11 周六 17:53]
@@ -185,54 +187,44 @@ SCHEDULED: <2022-07-02 周六 18:00 ++1w> DEADLINE: <2022-07-04 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 编写季度报告                                             :m8:
-CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-05-31 周二 14:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-11 周六 17:53
-:END:
-*** DONE [#A] 整合项目编辑器                                           :m8:
-CLOSED: [2022-06-09 周四 20:34] SCHEDULED: <2022-06-07 周二 20:34>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-11 周六 17:53
-:END:
-*** DONE [#A] 编辑器资源替换                                           :m8:
-CLOSED: [2022-06-09 周四 20:35] SCHEDULED: <2022-06-08 周三 20:35>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-11 周六 17:53
-:END:
-*** DONE [#A] 战斗相关常量优化                                         :m8:
-CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-06-09 周四 20:36>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-11 周六 17:53
-:END:
-*** DONE [#A] 特殊跳字实现                                             :m8:
-CLOSED: [2022-06-18 周六 14:01] SCHEDULED: <2022-06-10 周五 16:45>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-18 周六 19:11
-:END:
-*** DONE [#A] 优化战斗信息面板                                         :m8:
-CLOSED: [2022-06-25 周六 13:07] SCHEDULED: <2022-06-24 周五 10:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-06-25 周六 14:37
-:END:
+** DONE [#A] 登录界面成品号体验功能 
+CLOSED: [2022-07-08 周五 09:15] SCHEDULED: <2022-07-04 周一 14:28>
+** TODO [#A] 特效层级优化                                              :m8:
+SCHEDULED: <2022-07-08 周五 00:00>
+** DONE [#A] spine动作名兼容                                           :m8:
+CLOSED: [2022-07-08 周五 17:50]
 * Appointment
 * Project
-** TODO [#A] 优化spine编辑器                                           :m8:
-SCHEDULED: <2022-05-18 周三 16:32> DEADLINE: <2022-06-01 周三 16:32>
+** DONE [#A] 优化spine编辑器                                            :m8:
+CLOSED: [2022-07-08 周五 09:15] SCHEDULED: <2022-05-18 周三 16:32> DEADLINE: <2022-06-01 周三 16:32>
 :PROPERTIES:
 :BLOCKER: children
 :END:                          
-*** TODO 明确需求
+*** DONE 明确需求
+CLOSED: [2022-07-01 周五 10:11]
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
-*** WAIT UI设计
-*** WAIT 模型设计
-*** WAIT 编码阶段
-*** WAIT 测试
+*** DONE UI设计
+CLOSED: [2022-07-01 周五 10:11] SCHEDULED: <2022-07-01 周五 10:11>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 模型设计
+CLOSED: [2022-07-01 周五 10:11] SCHEDULED: <2022-07-01 周五 10:11>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 编码阶段
+CLOSED: [2022-07-08 周五 09:15] SCHEDULED: <2022-07-01 周五 10:11>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 测试
+CLOSED: [2022-07-08 周五 09:15] SCHEDULED: <2022-07-08 周五 09:15>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
