[py] 1. 新增阵型示例

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -54,8 +54,16 @@ DEADLINE: <2022-08-01 周一 23:00 ++1w> SCHEDULED: <2022-07-29 周五 18:00 ++1
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-07-18 周一 10:44]
+:LAST_REPEAT: [2022-07-23 周六 17:01]
 :END:
+- State "DONE"       from "TODO"       [2022-07-23 周六 17:01] \\
+  1. 为战斗模块部分ui增加缓存机制
+     - 使用装饰器装饰工厂函数来实现缓存创建功能
+     - 根据工厂函数和其参数决定使用哪一个缓存池
+     - 根据缓存对象是否在ui节点树上来判断缓存对象的忙碌状态
+  2. 法术编辑器2d渲染改为可配置参数
+  -------------------------------------
+  1. death door完美收官, 很不错的动作解密游戏
 - State "DONE"       from "TODO"       [2022-07-18 周一 09:27] \\
   1. 修复蓝图虚拟节点参数设置错误的问题
   2. 处理角色近战攻击z值错误的问题
@@ -1040,10 +1048,12 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 ** TODO [#A] 减肥                                                   :event:
-SCHEDULED: <2022-07-04 周一 17:27 ++1w>
+SCHEDULED: <2022-07-25 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-07-04 周一 09:41]
+:LAST_REPEAT: [2022-07-25 周一 11:07]
 :END:
+- State "DONE"       from "TODO"       [2022-07-25 周一 11:07] \\
+  4.0km, 68.8kg
 - State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
 - 4.0km, 69.7kg
 - State "DONE"       from "TODO"       [2022-06-25 周六 17:08] \\
