[py] 1. 槽位分配阵型

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -791,12 +791,29 @@ DEADLINE: <2022-08-01 周一 23:00 ++1w> SCHEDULED: <2022-07-29 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-07-30 周六 23:00 ++1m> SCHEDULED: <2022-07-30 周六 09:00 ++1m>
+DEADLINE: <2022-08-30 周二 23:00 ++1m> SCHEDULED: <2022-08-30 周二 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-07-04 周一 14:31]
+:LAST_REPEAT: [2022-07-28 周四 09:34]
 :END:
+- State "DONE"       from "TODO"       [2022-07-28 周四 09:34] \\
+  工作上:
+  1. 成品号体验功能
+  2. spine同个动作兼容多个动作名
+  3. 特效层级优化
+     - 生成虚拟节点来实现在角色上的位置
+     - 支持计算受击中心的动态位置
+  4. 受击特效优化
+     - 为技能表现增加受击蓝图, 在受击时会播放受击蓝图
+  5. 战斗特效缓存
+     - 增加缓存模块, 处理战斗中反复创建的ui对象, 提高性能
+  6. 优化spine编辑器
+     - 重构spine编辑器, 优化界面, 支持灵活的的扩展
+  生活上:
+  1. death door, 很不错
+  2. forager, 后期有点无聊了
+  3. hades, 精致的画面, 拳拳到肉的打击感, 肉鸽中罕见的精美剧情
 - State "DONE"       from "TODO"       [2022-07-04 周一 14:31] \\
   工作上:
   1. 编写季度报告
