--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -50,12 +50,17 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-08-01 周一 23:00 ++1w> SCHEDULED: <2022-07-29 周五 18:00 ++1w>
+DEADLINE: <2022-08-08 周一 23:00 ++1w> SCHEDULED: <2022-08-05 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-07-23 周六 17:01]
+:LAST_REPEAT: [2022-08-01 周一 17:28]
 :END:
+- State "DONE"       from "TODO"       [2022-08-01 周一 17:28] \\
+  1. 受击特效优化
+     - 为技能表现增加受击蓝图, 在受击时会播放受击蓝图
+  -------------------------------------
+  1. hades好香, 已经通关涅
 - State "DONE"       from "TODO"       [2022-07-23 周六 17:01] \\
   1. 为战斗模块部分ui增加缓存机制
      - 使用装饰器装饰工厂函数来实现缓存创建功能
