[py] 1. 提供坐标转换函数

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -59,6 +59,10 @@ DEADLINE: <2022-08-08 周一 23:00 ++1w> SCHEDULED: <2022-08-05 周五 18:00 ++1
 - State "DONE"       from "TODO"       [2022-08-01 周一 17:28] \\
   1. 受击特效优化
      - 为技能表现增加受击蓝图, 在受击时会播放受击蓝图
+  2. 增加受击者中心虚拟节点
+     - 根据受击者全部位置求均值
+  3. 兼容buff乱序, 即便不存在的buff更新计数也会生效
+  4. buff表现和buff图标拆分
   -------------------------------------
   1. hades好香, 已经通关涅
 - State "DONE"       from "TODO"       [2022-07-23 周六 17:01] \\
