--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -50,12 +50,21 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-08-08 周一 23:00 ++1w> SCHEDULED: <2022-08-05 周五 18:00 ++1w>
+DEADLINE: <2022-08-15 周一 23:00 ++1w> SCHEDULED: <2022-08-12 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-08-01 周一 17:28]
+:LAST_REPEAT: [2022-08-06 周六 16:30]
 :END:
+- State "DONE"       from "TODO"       [2022-08-06 周六 16:30] \\
+  1. 资源编辑器接入新映射:
+     - 受击中心上下支持复用编辑器的受击中心表现
+  2. 战斗协议优化
+     - 删除无效协议和无效字段
+  3. 战斗日志导出新增执行指令时间导出功能
+  4. 战斗日志浏览器支持导入指令日志
+  -------------------------------------
+  1. 姥姥可能要不行了, 想回去但是北京那边不让进T.T
 - State "DONE"       from "TODO"       [2022-08-01 周一 17:28] \\
   1. 受击特效优化
      - 为技能表现增加受击蓝图, 在受击时会播放受击蓝图
@@ -1073,11 +1082,13 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥                                                   :event:
-SCHEDULED: <2022-07-25 周一 17:27 ++1w>
+** TODO [#A] 减肥                                                    :event:
+SCHEDULED: <2022-08-08 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-07-25 周一 11:07]
+:LAST_REPEAT: [2022-08-06 周六 16:28]
 :END:
+- State "DONE"       from "TODO"       [2022-08-06 周六 16:28] \\
+  4.0km, 69.4kg
 - State "DONE"       from "TODO"       [2022-07-25 周一 11:07] \\
   4.0km, 68.8kg
 - State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
