[gd] add catan project

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -50,12 +50,35 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-08-15 周一 23:00 ++1w> SCHEDULED: <2022-08-12 周五 18:00 ++1w>
+DEADLINE: <2022-09-12 周一 23:00 ++1w> SCHEDULED: <2022-09-10 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-08-06 周六 16:30]
+:LAST_REPEAT: [2022-09-03 周六 19:17]
 :END:
+- State "DONE"       from "TODO"       [2022-09-03 周六 19:17] \\
+  1. 查找在手机上战斗受击时游戏掉帧的问题
+     - 确定为击中时播放声音所致
+  2. 新增音效开关gm指令
+  3. 战斗中灵力技能喊招机制调整
+  4. 新增战场图腾显示功能
+  -----------------------
+  1. godot学习中
+- State "DONE"       from "TODO"       [2022-08-27 周六 18:19] \\
+  1. 战斗中状态栏支持一键切换状态
+  2. 战斗日志浏览器支持时间轴浏览
+     - 每条战斗指令以条状形式在时间坐标系中展示
+     - 支持按名称进行搜索跳转
+  -----------------------
+  1. 玩了多少个僵尸游戏了, (喋血复仇, 僵尸世界大战, 腐烂国度2)
+  2. 卡坦岛不错
+- State "DONE"       from "TODO"       [2022-08-20 周六 17:13] \\
+  1. 战斗中法宝支持灵力上限变化
+  2. 支持饼状图控件
+  3. 支持自定义法宝奖励显示
+  4. 战场日志浏览器支持浏览性能统计数据
+  -----------------------
+  1. 腐烂国度2的联机简直是shit
 - State "DONE"       from "TODO"       [2022-08-06 周六 16:30] \\
   1. 资源编辑器接入新映射:
      - 受击中心上下支持复用编辑器的受击中心表现
@@ -809,12 +832,38 @@ DEADLINE: <2022-08-15 周一 23:00 ++1w> SCHEDULED: <2022-08-12 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-08-30 周二 23:00 ++1m> SCHEDULED: <2022-08-30 周二 09:00 ++1m>
+DEADLINE: <2022-09-30 周五 23:00 ++1m> SCHEDULED: <2022-09-30 周五 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-07-28 周四 09:34]
+:LAST_REPEAT: [2022-09-03 周六 19:21]
 :END:
+- State "DONE"       from "TODO"       [2022-09-03 周六 19:21] \\
+  工作上:
+  1. spine角色附件功能拆分
+  2. 技能描述新增附加效用
+  3. spine编辑器优化
+     - 支持默认数据修改
+     - 新增底部信息组件
+  4. ui编辑器优化
+     - 兼容多边形框
+     - 调整复选按钮的信号触发机制
+     - 新增饼状图控件
+  5. 战斗日志浏览器优化
+     - 支持导入战斗指令执行数据
+     - 支持数据图表和时间轴两种查看模式
+  6. 战斗优化
+     - 信息状态面板新增一键展开/缩放功能
+     - 调整法宝技能喊招时机
+     - 支持导出执行时间数据
+     - 优化指令执行顺序, 支持跳过无效指令
+     - 新增战场图腾显示功能
+  7. gm调整
+     - 新增屏蔽音效开关
+  8. 构建相关
+     - 编辑器打包改为加密包
+  生活上:
+  1. 平静的一个月
 - State "DONE"       from "TODO"       [2022-07-28 周四 09:34] \\
   工作上:
   1. 成品号体验功能
