--- a/src/org/note/tech_note.org
+++ b/src/org/note/tech_note.org
@@ -47,6 +47,24 @@
 选择File->Invalidate Caches / Restart, 清空全部缓存并重启即可解决
 ** windows商店无法打开
 可以检查一下代理设置, 有可能是开启代理导致的
+** python requirments.txt导入与导出
+通过requirements.txt可以快速得知项目依赖的包
+- 导入: ~pip install -r requirements.txt~
+- 导出:
+  1. 使用 ~pip freeze~ 导出当前环境下的所有依赖包(除非你位于虚拟环境里, 否则不要使用这个导出)
+  2. pip安装pipreqs, 然后在项目根目录输入 ~pipreqs ./ --encoding=utf-8 --force~
+** python venv部署
+python的虚拟环境是一种类似于虚拟机的概念, 单独创建一个和全局环境隔离的虚拟环境, 安装的全部第三方包和全局环境
+相互独立
+*** 创建虚拟环境
+~python -m venv new_venv~, 最后一个参数是虚拟环境的名字
+*** 激活虚拟环境
+进入到new_venv/Scripts目录, 执行指令 ~./activate~
+*** 离开虚拟环境
+执行指令 ~deactivate~
+** emacs server
+使用 ~emacs --daemon~ 可以打开emacs服务器, 然后通过 ~emacsclient filename~ 可以快速打开文件, 每次打开都复用
+当前打开的client, 不会重新创建新的进程
 * 概念相关                                                          :Concept:
 ** UML图                                                              :uml:
 *** 类图
