[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,20 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-10-03 周一 23:00 ++1w> SCHEDULED: <2022-10-01 周六 18:00 ++1w>
+DEADLINE: <2022-10-10 周一 23:00 ++1w> SCHEDULED: <2022-10-08 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-09-24 周六 19:03]
+:LAST_REPEAT: [2022-09-30 周五 19:20]
 :END:
+- State "DONE"       from "TODO"       [2022-09-30 周五 19:20] \\
+  1. 接入防沉迷系统
+  2. 支持战斗场景切换
+  3. 处理备战穿透
+  4. 调整文本接口兼容公共模块
+  5. 整理项目使用权限
+  -----------------------
+  1. 卡坦70%, 剩下的交易系统在技术上难度不大
 - State "DONE"       from "TODO"       [2022-09-24 周六 19:03] \\
   1. 接入实名认证系统
   2. 处理json编码中文字符在ios上导致的错误
@@ -820,12 +828,40 @@ DEADLINE: <2022-10-03 周一 23:00 ++1w> SCHEDULED: <2022-10-01 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-09-30 周五 23:00 ++1m> SCHEDULED: <2022-09-30 周五 09:00 ++1m>
+DEADLINE: <2022-10-30 周日 23:00 ++1m> SCHEDULED: <2022-10-30 周日 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-09-03 周六 19:21]
+:LAST_REPEAT: [2022-09-30 周五 19:31]
 :END:
+- State "DONE"       from "TODO"       [2022-09-30 周五 19:31] \\
+  工作上:
+  - 接入公共系统
+    1. 接入防沉迷系统
+    2. 接入实名认证系统
+    3. 完成接入战盟审核系统的功能
+       - 支持战盟账号的注册, 登陆和切换
+       - 修改部分战盟登陆的ui
+       - 调整文本接口兼容公共模块
+  - 项目优化
+    1. 支持战斗场景切换
+    2. 处理备战穿透
+    3. 整理项目使用权限
+    4. 处理json编码中文字符在ios上导致的错误
+    5. 本地存储模块升级, 新增加密存储字段
+       - 通过将数据结构转为json字符串然后在使用md5加密
+       - 支持对元组的加密
+    6. 支持网络协议录制功能
+       - 通过gm指令来开关网络录制
+       - 录制的录像以文件的形式存放于network_records目录下
+    7. 支持录像播放器
+       - 播放时可以按需过滤需要处理的网络协议
+       - 支持对不同解包速率的模拟
+    8. 支持战斗录像播放
+       - 支持从网络协议录制导出的文件中播放战斗
+       - 播放按钮位于测试战斗的左上角
+  生活上:
+  1. 废寝忘食的开发卡坦岛, 算是自己制作的第一款可以玩的游戏(并且还是多人联机)
 - State "DONE"       from "TODO"       [2022-09-03 周六 19:21] \\
   工作上:
   1. spine角色附件功能拆分
