--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -112,11 +112,12 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-10-01 周六 18:00 ++1w> DEADLINE: <2022-10-03 周一 12:00 ++1w>
+SCHEDULED: <2022-10-08 周六 18:00 ++1w> DEADLINE: <2022-10-10 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-09-24 周六 19:03]
+:LAST_REPEAT: [2022-09-30 周五 19:20]
 :END:
+- State "DONE"       from "TODO"       [2022-09-30 周五 19:20]
 - State "DONE"       from "TODO"       [2022-09-24 周六 19:03]
 - State "DONE"       from "TODO"       [2022-09-24 周六 19:03]
 - State "DONE"       from "TODO"       [2022-09-19 周一 09:20]
@@ -218,6 +219,18 @@ CLOSED: [2022-09-24 周六 19:02] SCHEDULED: <2022-09-19 周一 09:00>
 :PROPERTIES:
 :ARCHIVE_TIME: 2022-09-24 周六 19:05
 :END:
+*** DONE [#A] 接入防沉迷系统                                           :m8:
+CLOSED: [2022-09-28 周三 19:55] SCHEDULED: <2022-09-26 周一 14:29>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-09-30 周五 17:27
+:END:
+*** DONE [#A] 英雄山关卡场景切换                                       :m8:
+CLOSED: [2022-09-28 周三 19:55] SCHEDULED: <2022-09-27 周二 00:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-09-30 周五 17:27
+:END:
+** TODO [#A] 权限申请                                                  :m8:
+SCHEDULED: <2022-09-26 周一 14:29>
 * Project
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
